--- a/style.css
+++ b/style.css
@@ -1,37 +1,42 @@
 /*CSS Reset / Normalize*/
-/* Hemos disponibilizado el básico de reset de estilos. Si quieren, añadan más informaciones 
+/* Hemos disponibilizado el básico de reset de estilos. Si quieren, añadan más informaciones
 en las secciones señaladas */
 /*Já deixaremos o básico de reset de estilos. Caso queira adicionar mais informações
 coloque nas sessões indicadas*/
 
-:root{
+:root {
     /* Inserta la variable de los otros colores inspeccionando el exemplo de figma */
     /*Se esforce para trabalhar com variáveis, é uma dica profissional valiosa*/
-   --cor-de-fundo: #F5F5F5;
-   --cor-de-link: #000;
+    --cor-de-fundo: #F5F5F5;
+    --cor-de-link: #000;
+    --cor-de-letra: #464646;
 }
 
 body {
     box-sizing: border-box;
-    background-color: var(--cor-de-fundo) ;
+    background-color: var(--cor-de-fundo);
     font-family: 'Raleway';
     margin: 0;
     padding: 0;
     line-height: 1;
 }
-ol, ul,li {
+
+ol,
+ul,
+li {
     list-style: none;
 }
-a{
+
+a {
     text-decoration: none;
     color: var(--cor-de-link);
 }
 
-/*En este desafío nosostros gustaríamos que ustedes intentaran utilizar la metodología BEM. 
+/*En este desafío nosostros gustaríamos que ustedes intentaran utilizar la metodología BEM.
 
 Lo que es el BEM?
 
-BEM (Bloque, Elemento, Modificador) es un enfoque basado en componentes para el 
+BEM (Bloque, Elemento, Modificador) es un enfoque basado en componentes para el
 desarrollo web. La idea detrás de esto es dividir la interfaz de usuario en bloques
 independientes. Esto hace que el desarrollo de la interfaz sea fácil y rápido, incluso
 con una interfaz de usuario compleja, y permite la reutilización del código existente sin copiar y pegar.
@@ -40,64 +45,342 @@ Enlace de la documentación oficial!
 https://en.bem.info/methodology/quick-start/*/
 
 /*Sección Menu*/
-section.menu{
-    display: flex;
 
+section.menu {
+    display: flex;
+    margin: auto 152px;
+    justify-content: space-between;
+    color: var(--cor-de-letra);
+    font-size: 16px;
 }
 
-nav{
+header.menu__header {
+    align-items: center;
     display: flex;
 }
-.menu__list{
-    display: flex;
-    gap: 20px;
-    margin-right: 120px;
+
+header.menu__header img {
+    width: 24px;
+    margin-right: 6px;
 }
-.menu__header{
+
+ul.menu__list {
     display: flex;
-    margin-right: 200px;    
+    align-items: center;
+    gap: 32px;
+}
+
+ul.menu__list a {
+    color: var(--cor-de-letra);
 }
 
 /*Sección Title*/
 
-section.title{
+div.title__div {
+    display: flex;
+    flex-direction: row-reverse;
+    margin: 32px 152px;
+    align-items: center;
+    justify-content: center;
+}
 
+div.title__container {
+    color: var(--cor-de-letra);
+}
+
+div.title__container h2 {
+    font-size: 52px;
+    font-weight: bold;
+}
+
+div.title_container h3 {
+    font-size: 22px;
+}
+
+ul.title__network {
+    display: flex;
+    padding: 0;
+    gap: 32px;
 }
 
 /*Sección About*/
 
-section.about{
+section.about {
+    background-color: #EAF2FD;
+}
 
+div.about__container {
+    margin: auto 152px;
+    padding: 64px 0;
+}
+
+h3.about__title {
+    color: var(--cor-de-letra);
+    font-size: 32px;
+    font-weight: bold;
+}
+
+p.about__paragraph {
+    padding-right: 385px;
+    font-size: 16px;
+}
+
+/* seccion skills */
+
+section.skills {
+    background-color: #F5F5F5;
+}
+
+h3.skills__title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 32px;
+    font-weight: bold;
+    color: var(--cor-de-letra);
+}
+
+div.skills__line {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    margin: 50px;
+}
+
+div.skills__box {
+    background-color: #FFFFFF;
+    width: 15%;
+    height: 174px;
+    display: flex;
+    align-items: end;
+}
+
+div.skills__box ul {
+    padding: 0;
+    margin: 0;
+}
+
+ul li.skills__img {
+    margin-left: 16px;
+}
+
+ul li.skills__name {
+    margin: 8px 16px 16px 16px;
 }
 
 /*Sección Hobbies*/
 
-section.hobbies{
-    
+h3.hobbies__title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 32px;
+    font-weight: bold;
+    color: var(--cor-de-letra);
+}
+
+div.hobbies__line {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    margin: 50px;
+}
+
+div.hobbies__box {
+    background-color: #FFFFFF;
+    width: 15%;
+    height: 174px;
+    display: flex;
+    align-items: end;
+}
+
+div.hobbies__box ul {
+    padding: 0;
+    margin: 0;
+}
+
+ul li.hobbies__img {
+    margin-left: 16px;
+}
+
+ul li.hobbies__name {
+    margin: 8px 16px 16px 16px;
 }
 
 /* Experiencia Académica*/
 
-section.academic{
+section#formacion.academic {
+    background-color: #EAF2FD;
+}
 
+h2.academic__title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 82px;
+}
+
+div.academic__courses {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+}
+
+ul.academic__courses__list {
+    padding: 0;
+}
+
+li.academic__courses__item__img {
+    background-color: #FFFFFF;
+    /* border: 1px solid red; */
+    padding: 78px 88px;
+}
+
+li.academic__courses__item__title h4 {
+    margin: 8px 0;
+    color: var(--cor-de-letra);
+}
+
+li.academic__courses__item__subtitle p {
+    margin-bottom: 82px;
 }
 
 /* experiencia*/
+h2.experience__section__title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 32px 0;
+}
 
-section.experience{
+div.experience__box {
+    display: flex;
+    align-items: center;
+}
 
+div.experience__info-container {
+    margin-left: 16px;
+}
+
+h2.experience__title {
+    font-size: 22px;
+    font-weight: bold;
+    color: #464646;
+}
+
+h3.experience__text {
+    font-size: medium;
+    color: #464646;
+    font-weight: 100;
+    margin: 8px 0;
+}
+
+button.experiencia__botao--repo {
+    border: 1px solid #2A7AE4;
+    padding: 16px;
+    color: #2A7AE4;
+    margin-right: 0;
+    /* box-sizing: border-box; */
+    cursor: pointer;
+}
+
+button.experience__botao--demo {
+    /* box-sizing: border-box; */
+    border: 1px solid #2A7AE4;
+    background-color: #2A7AE4;
+    padding: 16px;
+    color: #FFFFFF;
+    margin-left: 32px;
+    cursor: pointer;
 }
 
 /*Contacto*/
 
-section.formcontato{
+section.formcontato {
+    margin-top: 32px;
+    background-color: #EAF2FD;
+    padding: 62px 152px;
 
+}
+
+div.formcontato__contacto {
+    display: flex;
+}
+
+img.formcontato__img {
+    width: 464px;
+    height: 593px;
+    margin-right: 16px;
+}
+
+h2.formcontato__title {
+    font-size: 32px;
+    font-weight: bold;
+    color: #464646;
+    margin-top: 0;
+    margin-bottom: 8px;
+}
+
+h3.formcontato__subtext {
+    margin-top: 0;
+    font-size: medium;
+    font-weight: 100;
+    color: #464646;
+    margin-bottom: 0;
+}
+
+form.formcontato__form {
+    margin-top: 32px;
+}
+
+input.formcontato__input {
+    width: 100%;
+    height: 56px;
+    margin-bottom: 32px;
+    border: none;
+    box-shadow: #464646;
+    border-radius: 4px;
+}
+
+input.formcontato__input:focus {
+    border: none;
+    outline: none;
+    border-bottom: 1px solid #2A7AE4;
+}
+
+textarea.formcontato__textarea {
+    width: 100%;
+    height: 133px;
+    border: none;
+    resize: none;
+}
+
+textarea.formcontato__textarea:focus {
+    outline: none;
+}
+
+button.formcontato__botao {
+    margin-top: 16px;
+    padding: 16px;
+    color: #FFFFFF;
+    background-color: #2A7AE4;
+    border: none;
 }
 
 /*footeer*/
 
-section.footer{
-   
+
+div.footer__rodape {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 32px 0;
+}
+
+div.footer__rodape p {
+    margin: 0;
+    color: #464646;
 }
 
 /* Vamos a desafiarnos trabajando con responsividad?
@@ -107,39 +390,39 @@ Utiliza las referencias de los breakpoints @media abajo */
 /*Tablet*/
 @media (min-width: 768px) {
 
-/* Menú */
+    /* Menú */
 
-/*title*/
+    /*title*/
 
-/*Skills*/
+    /*Skills*/
 
-/*Hobbies*/
+    /*Hobbies*/
 
-/*Formación Académica*/
+    /*Formación Académica*/
 
-/*Experiencia Profesional*/
+    /*Experiencia Profesional*/
 
 }
 
 /*Mobile*/
 @media (min-width: 425px) {
 
-/*Menu*/
+    /*Menu*/
 
-/*Titulo*/
+    /*Titulo*/
 
-/*Sección sobre mi*/
+    /*Sección sobre mi*/
 
-/*Skills*/
+    /*Skills*/
 
-/*Hobbies*/
- 
-/*Formación Académica*/
+    /*Hobbies*/
 
-/*Experiencia Profesional*/
+    /*Formación Académica*/
 
- /*Contacto*/
+    /*Experiencia Profesional*/
 
-/*Footer*/
+    /*Contacto*/
+
+    /*Footer*/
 
 }
